# Trinity

./: .gitmodules
camera_software/control_software/fcutils/test/: CMakeLists.txt  client_siab.cpp  test_chrono.cpp  test_consumer.cpp  test_consumermanager.cpp  test_networking2.cpp  test_random.cpp  test_string.cpp  test_sync_queue.cpp  test_system.cpp  test_tcp_udp_msg.cpp  test_units.cpp
camera_software/control_software/fcutils/test/include/: commands.h  state_message_cmds.h
camera_software/control_software/fcutils/test/scripts/: ExpectReConfigure.sh  ExpectScript.sh  ExpectStopAcq.sh  initCLI.ecc  re-configure.ecc
camera_software/control_software/fcutils/test/src/: commands.cpp  smbus.c
get/20210208/CoBoFrameViewer/src/get/: Channel.cpp  Channel.h  CoBoDisplay.h  CoBoEvent.cpp  CoBoEvent.h  CoBoFrameViewer.cpp  CoBoFrameViewer.h  CoBoStandardDisplay.cpp  Makefile.am  PlotCurve.cpp  QwtSymbolDialog.cpp  QwtSymbolDialog.h  cobo-frame-viewer.cpp  plot.h  viewgraph.cpp  viewgraph.h
get/20210208/CoBoFrameViewer/src/graw2gmat/: Makefile.am
get/20210208/CoBoFrameViewer/src/graw2root/: Makefile.am
get/20210208/CoBoFrameViewer/src/root2disp/: CoBoFrameBrowser.cpp  CoBoFrameBrowser.h  LinkDefGuiGET.h  Makefile.am  cobo-frame-root2disp.cpp
get/20210208/CompoundConfig/src/: Makefile.am
get/20210208/CompoundConfig/src/CCfg/: Attribute.h  AttributeClass.cpp  ClassInfo.cpp  Object.cpp  Object.h  Path.h  PathNode.cpp  PathNode.h  Range.cpp  Range.h  Scalar.cpp  Scalar.h  ScalarClassInfo.cpp  ScalarClassInfo.h  TypeInfo.h  UnsupportedOperation.cpp  UnsupportedOperation.h  ValidationVisitor.cpp  ValidationVisitor.h  Value.cpp  ValueRange.cpp  Visitor.h
get/20210208/CompoundConfig/test/: Makefile.am  main.cpp
get/20210208/CompoundConfig/test/CCfg/: PathNode.cpp  RangeTest.cpp  VisitorTest.cpp
get/20210208/CompoundConfig/test/data/: daq.bcfg  daq.xml  daq2_ill.bcfg  daq_ill.xml  daq_inc.xml  daq_mod.xml
get/20210208/ConfigDatabase/: .autotools  ConfigDatabase.pc.in  Makefile.am  autogen.sh  configure.ac
get/20210208/ConfigDatabase/.svn/: wc.db
get/20210208/ConfigDatabase/am/.svn/: wc.db
get/20210208/ConfigDatabase/doc/: doxyfile
get/20210208/ConfigDatabase/m4/.svn/: wc.db
get/20210208/ConfigDatabase/src/: Makefile.am
get/20210208/ConfigDatabase/test/: TestParameters.cpp  testconfig2.xml  tut.h
get/20210208/ConfigServer/: .autotools  AUTHORS  ChangeLog  MANIFEST.MF  Makefile.am  README  cleanup.sh
get/20210208/ConfigServer/.svn/: wc.db
get/20210208/ConfigServer/am/.svn/: wc.db
get/20210208/ConfigServer/doc/: Doxyfile_standalone  doxyfile
get/20210208/ConfigServer/m4/.svn/: wc.db
get/20210208/ConfigServer/src/CCfg/: CatchExceptions.h  ConfigServerI.cpp  ConfigServerI.h  DocumentFacade.cpp  RCConfigI.cpp  RCConfigI.h  RDocumentI.cpp  RDocumentI.h  SwigFacade.i
get/20210208/ConfigServer/test/: ConfigTest.xml  GetConfigParser.java  JCConfigTest.java  RCConfigTest.cpp  hardwareDescription_fullCoBoStandAlone.xcfg
get/20210208/ConfigWidgets/: .project  Makefile.am  configure.ac
get/20210208/ConfigWidgets/.svn/: wc.db
get/20210208/ConfigWidgets/am/.svn/: wc.db
get/20210208/ConfigWidgets/m4/: ax_lib_qwtplot3d.m4
get/20210208/ConfigWidgets/m4/.svn/: wc.db
get/20210208/ConfigWizard/src/: Makefile.am  get-config-wizard.cpp
get/20210208/ConfigWizard/src/get/: ConfigWizardMainWindow.cpp  ConfigWizardMainWindow.h
get/20210208/DatabaseWidgets/: .project  ChangeLog  Makefile.am  configure.ac
get/20210208/DatabaseWidgets/.svn/: wc.db
get/20210208/DatabaseWidgets/am/.svn/: wc.db
get/20210208/DatabaseWidgets/m4/: ax_boost_program_options.m4  ax_lib_mysql.m4
get/20210208/DatabaseWidgets/m4/.svn/: wc.db
get/20210208/DatabaseWidgets/src/: DatabaseWidgets.qrc
get/20210208/GetBench/: .cproject  .project  ChangeLog  Makefile.VxWorks.am  README  cleanup.sh  configure.ac
get/20210208/GetBench/.svn/: wc.db
get/20210208/GetBench/am/.svn/: wc.db
get/20210208/GetBench/data/: Makefile.am
get/20210208/GetBench/data/config/: configure-ExternalTrigger-2CoBo_1Mutant.xcfg  describe-mono-node.xcfg  hardwareDescription_Zedboard.xcfg  hardwareDescription_fullCoBoStandAlone.xcfg  log4j.properties
get/20210208/GetBench/data/format/: CoboFormats-Rev-5.xcfg
get/20210208/GetBench/data/xsd/: run_control_types.xsd
get/20210208/GetBench/doc/: Doxyfile.trac  MainPage.dox  build_details.dox  config_parameters.dox  get_software_packages.eps  getting_started.dox  install.dox  interfaces.dox  references.dox  requirements_debian.dox  requirements_macosx.dox  requirements_redhat.dox  tools.dox
get/20210208/GetBench/doc/dot/: get_client_server_links.dot  get_embedded_linux_software_packages.dot  get_software_packages.dot  uCoBo_setup.dot
get/20210208/GetBench/m4/.svn/: wc.db
get/20210208/GetBench/scripts/: download_get_components.sh  install_get_components.sh  tag_get_components.sh
get/20210208/GetBench/src/: GetHwServer.cpp  GetHwServer.h  SimServerDevices.cpp
get/20210208/GetBench/test/: main.cpp
get/20210208/GetController/: AUTHORS  configure.ac
get/20210208/GetController/.svn/: wc.db
get/20210208/GetController/am/: cuda.am
get/20210208/MDaq/: .project  Makefile.am  configure.ac  mdaq-cli.pc.in  mdaq-daq.pc.in  mdaq-hwserver.pc.in  mdaq-mt.pc.in  mdaq-utl.pc.in
get/20210208/MDaq/.svn/: wc.db
get/20210208/MDaq/am/: ice.am
get/20210208/MDaq/am/.svn/: wc.db
get/20210208/MDaq/doc/: doxyfile
get/20210208/MDaq/src/: SimServerDevices.cpp
get/20210208/MDaq/test/: net_test.sh
get/20210208/MultiFrame/: .autotools  .cproject  .project  AUTHORS  ChangeLog  MultiFrame.pc.in  NEWS  cleanup.sh  configure.ac
get/20210208/MultiFrame/.svn/: wc.db
get/20210208/MultiFrame/doc/: ExampleFrameFormat.dox  MainPage.dox  doxyfile
get/20210208/MultiFrame/test/: tut.h
get/20210208/StateMachine/: .autotools  .cproject  Makefile.am  cleanup.sh  configure.ac  dhsm-servant.pc.in  dhsm.pc.in
get/20210208/StateMachine/.svn/: wc.db
get/20210208/StateMachine/src/: Makefile.am
get/20210208/StateMachine/test/: Makefile.am  SmTest.cpp  test_dhsm.sh.in
(+997 files in other folders)
